gateway-api: Re-use the same translation config
This is to pave the way for more use case later.

Signed-off-by: Tam Mach <tam.mach@cilium.io>

--- a/operator/pkg/model/translation/gateway-api/testdata/basic_http_listener_with_xff_num_trusted_hops/cec-output.yaml
+++ b/operator/pkg/model/translation/gateway-api/testdata/basic_http_listener_with_xff_num_trusted_hops/cec-output.yaml
@@ -19,6 +19,15 @@ spec:
     - "8080"
   resources:
   - '@type': type.googleapis.com/envoy.config.listener.v3.Listener
+    additionalAddresses:
+    - address:
+        socketAddress:
+          address: '::'
+          portValue: 80
+    address:
+      socketAddress:
+        address: 0.0.0.0
+        portValue: 80
     filterChains:
     - filterChainMatch:
         transportProtocol: raw_buffer
